test/negative/212_negate_string.fx
// expect: not found
val x = -"abc"
println(x)
