test/negative/212_negate_string.err
212_negate_string.fx:2:9: error: the appropriate match for '__negate__' of type '(string -> <unknown>)' is not found.
Candidates:
 __negate__(long) -> long @ Builtins.fx:L:C -- argument 1 of type 'string' does not match 'long',
 __negate__('t [+]) -> 't [+] [generic: 't, __var_array__] @ Array.fx:L:C -- argument 1 of type 'string' does not match ''t [+]'

 2 | val x = -"abc"
   |         ^

1 errors occured during type checking.
